@@ -156,6 +156,9 @@ metricbeat.modules:
   hosts: ["unix:///var/run/docker.sock"]
   period: 10s
 
+  # Replace dots in labels with `_`. Set to false to keep dots
+  labels.dedot: true
+
   # To connect to Docker over TLS you must specify a client and CA certificate.
   #ssl:
     #certificate_authority: "/etc/pki/root/ca.pem"
