@@ -9,15 +9,15 @@ import (
 	"github.com/elastic/beats/metricbeat/module/docker"
 )
 
-func eventsMapping(imagesList []types.ImageSummary) []common.MapStr {
+func eventsMapping(imagesList []types.ImageSummary, dedot bool) []common.MapStr {
 	events := []common.MapStr{}
 	for _, image := range imagesList {
-		events = append(events, eventMapping(&image))
+		events = append(events, eventMapping(&image, dedot))
 	}
 	return events
 }
 
-func eventMapping(image *types.ImageSummary) common.MapStr {
+func eventMapping(image *types.ImageSummary, dedot bool) common.MapStr {
 	event := common.MapStr{
 		"id": common.MapStr{
 			"current": image.ID,
@@ -30,8 +30,8 @@ func eventMapping(image *types.ImageSummary) common.MapStr {
 		},
 		"tags": image.RepoTags,
 	}
-	labels := docker.DeDotLabels(image.Labels)
-	if len(labels) > 0 {
+	if len(image.Labels) > 0 {
+		labels := docker.DeDotLabels(image.Labels, dedot)
 		event["labels"] = labels
 	}
 	return event
